--- a/Feedback.html
+++ b/Feedback.html
@@ -6,7 +6,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
   <!--This is for a flavicon-->
-  <link rel="icon" type="icon/image-x" href="/images/JO%201.png">
+  <link rel="icon" type="icon/image-x" href="images/JO%201.png">
   <title>JOSHUA Feedback</title>
 </head>
 <body>
