--- a/Hobbies.html
+++ b/Hobbies.html
@@ -4,7 +4,7 @@
   <meta charset="UTF-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <link rel="icon" type="icon/image-x" href="/images/JO%201.png">
+  <link rel="icon" type="icon/image-x" href="images/JO%201.png">
   <style>
     table,th,td{
       border: 1px solid black;
@@ -57,15 +57,15 @@
     </tr>
   </table>
   <p><em><strong>The love Of food.</strong></em></p>
-  <img src="/images/20220406_200941.jpg" alt="Image of juice" width="300" height="400">
-  <img src="/images/20220406_201339.jpg" alt="Image of food" width="300" height="400">
-  <img src="/images/food.jpg" alt="Image of Arube next to table of food" width="330" height="248">
+  <img src="images/20220406_200941.jpg" alt="Image of juice" width="300" height="400">
+  <img src="images/20220406_201339.jpg" alt="Image of food" width="300" height="400">
+  <img src="images/food.jpg" alt="Image of Arube next to table of food" width="330" height="248">
   <br>
   <p><em><strong>Playing the guitar is a wonderful thing to do.</strong></em></p>
-  <img src="/images/DSC_0316.JPG" alt="Image of Arube Joshua playing the guitar" width="600" height="900"><br>
+  <img src="images/DSC_0316.JPG" alt="Image of Arube Joshua playing the guitar" width="600" height="900"><br>
   <p><em><strong>A beautiful waterfall scenary for one's outings.</strong></em></p>
-  <img src="/images/IMG_20190822_144002_6~2.jpg" alt="Image of Arube Joshua behind a waterfall" width="612" height="816"><br>
+  <img src="images/IMG_20190822_144002_6~2.jpg" alt="Image of Arube Joshua behind a waterfall" width="612" height="816"><br>
   <p><em><strong>Nothing more relaxing than winning a pool game.</strong></em></p>
-  <img src="/images/pool.jpg" alt="image of Arube standing next to pool table with a club in his hand" width="480" height="555">
+  <img src="images/pool.jpg" alt="image of Arube standing next to pool table with a club in his hand" width="480" height="555">
 </body>
 </html>
