--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
   <meta charset="UTF-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <link rel="icon" type="icon/image-x" href="/images/JO%201.png">
+  <link rel="icon" type="icon/image-x" href="images/JO%201.png">
   <style>
     img {
       float: left;
@@ -39,37 +39,4 @@
   <img src="/images/Home%20Image.jpg" alt="A photo of Arube Joshua">
 <h1>Arube Joshua</h1>
 <p><em>Software Engineering Student YEAR 1 Makerere University.</em><br>I am Student in Makerere University persuing a Bachelor of science in Software Engineering.</p>
-<p>I am an achiever who strives to reach his set goal. Having successfully completed high school, i aim at achieving my Degree then my Masters. </p>
-<br><br>
-<hr>
-<h2>Education Achievements</h2>
-<table>
-  <tr>
-    <th>YEAR</th>
-    <th>INSTITUION</th>
-    <th>ACHIEVEMENT</th>
-  </tr>
-  <tr>
-    <td>2019-2020</td>
-    <td>SMASK</td>
-    <td>UACE Certificate</td>
-  </tr>
-  <tr>
-    <td>2015-2018</td>
-    <td>SMASK</td>
-    <td>UCE Certificate</td>
-  </tr>
-  <tr>
-    <td>2008-2014</td>
-    <td>Santa Lucia</td>
-    <td>PLE certificate</td>
-  </tr>
-</table>
-<hr>
-<h3>Working Experience</h3>
-<p>I have gained a certain amount of working experience having worked for UNEB and managed a Farming project.<br>So, I am certain that I am efficent and can get results if I am given any task to acomplish within my capability.</p>
-<hr>
-<h4>Hobbies and Interests</h4>
-<p><em>For detailed information about my Hobbies and Interests </em><a href="Hobbies.html">>>Click here</a></p>
-</body>
-</html>
+<p>I am an achiever who strives to reach his set goal. Having successfully completed high
