--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
   <hr>
   <header><strong>Home</strong></header>
   <br>
-  <img src="/images/Home%20Image.jpg" alt="A photo of Arube Joshua">
+  <img src="images/Home%20Image.jpg" alt="A photo of Arube Joshua">
 <h1>Arube Joshua</h1>
 <p><em>Software Engineering Student YEAR 1 Makerere University.</em><br>I am Student in Makerere University persuing a Bachelor of science in Software Engineering.</p>
 <p>I am an achiever who strives to reach his set goal. Having successfully completed high school, i aim at achieving my Degree then my Masters. </p>
